--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -30,6 +30,21 @@
         </tbody>
     </table>
 
-      </div>
+<nav aria-label="Page nav">
+    <ul class="pagination">
+        {% for pagina in contatos.paginator.page_range %}
+            {% if contatos.number == pagina%}
+                <li class="page-item active">
+                    <a class="page-link" href="page ={{ pagina }}">{{pagina}}</a>
+                </li>
+            {% else %}
+                <li class="page-item">
+                    <a class="page-link" href="page ={{pagina}}">{{pagina}}</a>
+                </li>
+            {%endif%}
+        {%endfor%}
+    </ul>
+</nav>
+
 
 {% endblock %}
