Feat: Erro no css corrigido

--- a/contatos/templates/base.html
+++ b/contatos/templates/base.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="pt">
@@ -40,7 +40,7 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="{%static 'vendor/jquery/jquery.slim.min.js'%}"</script>
+  <script src="{%static 'vendor/jquery/jquery.slim.min.js'%}"></script>
   <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
 </body>
