--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html'%}
+{%load static%}
 
 {% block conteudo %} 
     <h1 class="mt-5">Minha agenda</h1>
@@ -6,6 +7,7 @@
     <table class="table">
         <thead>
         <tr>
+            <th>ID</th>
             <th>Nome</th>
             <th>Sobrenome</th>
             <th>Telefone</th>
@@ -18,6 +20,7 @@
         {%for contato in contatos%}
             {% if contato.mostrar %}
             <tr>
+                <th>{{contato.id}}</th>
                 <td>
                     <a href= "{% url 'verContato' contato.id %}"> {{contato.nome}}</a>
                 </td>
