--- a/contatos/templates/base.html
+++ b/contatos/templates/base.html
@@ -44,6 +44,7 @@
               id ="search-input" 
               placeholder="Digite sua pesquisa" 
               name="termo">
+              {% include 'parciais/_messages.html'%}
             </div>
           </div>
         </form>
