--- a/accounts/templates/accounts/cadastro.html
+++ b/accounts/templates/accounts/cadastro.html
@@ -9,32 +9,32 @@
 
     <div class="form-group">
         <label>Nome</label>
-        <input type="text" name="nome" class="form-control">
+        <input type="text" name="nome" value = "{{request.POST.nome}}" class="form-control">
     </div>
 
     <div class="form-group">
         <label>Sobrenome</label>
-        <input type="text" name="usobrenome" class="form-control">
+        <input type="text" name="sobrenome"  value = "{{request.POST.sobrenome}}" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Endereço de email</label>
-      <input type="email" name="email" class="form-control">
+      <input type="email" name="email" value = "{{request.POST.email}}"class="form-control">
     </div>
 
     <div class="form-group">
         <label>Nome de Usuário</label>
-        <input type="text" name="usuario" class="form-control">
+        <input type="text" name="usuario" value = "{{request.POST.usuario}}" class="form-control">
     </div>
 
     <div class="form-group">
         <label>Senha</label>
-        <input type="password" name="senha" class="form-control">
+        <input type="password" name="senha" value = "{{request.POST.senha}}" class="form-control">
     </div>
 
     <div class="form-group">
         <label>Repetir a senha</label>
-        <input type="password" name="senha2" class="form-control">
+        <input type="password" name="senha2" value = "{{request.POST.senha2}}" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-primary">Cadastrar-me</button>
