--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,26 +1,35 @@
 {% extends 'base.html' %}
 
+{%block titulo%}Login | {% endblock%}
+
 {% block conteudo %}
 <h1 class='mt-3 mb-3'>Login</h1>
 
-<form method="POST" action="{% url 'login' %}">
-    {% include 'parciais/_messages.html'%}
-    {% csrf_token %}
+{% if not user.is_authenticated%}
+    <form method="POST" action="{% url 'login' %}">
+        {% include 'parciais/_messages.html'%}
+        {% csrf_token %}
 
-    <div class="form-group">
-        <label>Nome de Usuário</label>
-        <input type="text" name="usuario" value = "{{request.POST.usuario}}" class="form-control">
-    </div>
+        <div class="form-group">
+            <label>Nome de Usuário</label>
+            <input type="text" name="usuario" value = "{{request.POST.usuario}}" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label>Senha</label>
-        <input type="password" name="senha" value = "{{request.POST.senha}}" class="form-control">
-    </div>
+        <div class="form-group">
+            <label>Senha</label>
+            <input type="password" name="senha" value = "{{request.POST.senha}}" class="form-control">
+        </div>
 
-    <button type="submit" class="btn btn-primary">Entrar</button>
+        <button type="submit" class="btn btn-primary">Entrar</button>
 
-</form>
+    </form>
+{% else %}
+<p>
+    Você já está logado como {{user}} - 
+    <a href="{%url 'logout'%}">Clique aqui para deslogar.</a>
+</p>
 
+{%endif%}
 
 {%include 'parciais/_messages.html'%}
 
