Feat: Dashbord form

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -28,6 +28,11 @@
     Você já está logado como {{user}} - 
     <a href="{%url 'logout'%}">Clique aqui para deslogar.</a>
 </p>
+<p>
+    Ou vá para seu 
+    <a href="{%url 'dashbord'%}">dashbord</a>
+</p>
+
 
 {%endif%}
 
